Risolte tutte le segnalazioni di tipo critical segnalate da sonar.